rke2/kube-system/cilium/httproute-hubble.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    authentik.home.arpa/enabled: "true"
spec:
  parentRefs:
    - name: hwcopeland-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - "hubble.hwcopeland.net"
  rules:
    - backendRefs:
        - name: authentik-server
          namespace: authentik
          port: 80
